@@ -134,6 +134,7 @@ AC_SUBST(SHELL)
 Make_rules="$srcdir/Make-rules"
 AC_SUBST_FILE(Make_rules)
 AC_LINK_FILES(gnu/xquery/testsuite/tab.xml.in, gnu/xquery/testsuite/tab.xml)
+AC_LINK_FILES(gnu/xquery/testsuite/bib.xml.in, gnu/xquery/testsuite/bib.xml)
 
 AC_OUTPUT(Makefile gnu/Makefile gnu/bytecode/Makefile gnu/math/Makefile
   gnu/lists/Makefile gnu/text/Makefile gnu/mapping/Makefile gnu/expr/Makefile
